[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/playerGrey_up1.png" type="Texture" id=1]
[ext_resource path="res://art/playerGrey_walk1.png" type="Texture" id=2]
[ext_resource path="res://art/playerGrey_up2.png" type="Texture" id=3]
[ext_resource path="res://art/playerGrey_walk2.png" type="Texture" id=4]
[ext_resource path="res://scenes/scripts/Player.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 27.0
height = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 160.112

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "walk"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 500, 300 )

[node name="Gun" type="Polygon2D" parent="."]
modulate = Color( 0.67451, 0.156863, 0.278431, 1 )
color = Color( 0.368627, 0.356863, 0.54902, 1 )
polygon = PoolVector2Array( 15, -5, 40, -5, 40, 5, 15, 5 )

[node name="MuzzlePos" type="Position2D" parent="Gun"]
position = Vector2( 100, 0 )

[node name="BulletPos" type="Position2D" parent="Gun"]
position = Vector2( 50, 0 )

[node name="CoolDownTimer" type="Timer" parent="Gun"]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 3.0

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 3 )

[connection signal="timeout" from="Gun/CoolDownTimer" to="." method="_on_CoolDownTimer_timeout"]
[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]
